--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorIconFill">#A1A1A1</color>
+    <color name="textColorPrimary">@color/colorGreyPrimary</color>
 </resources>
