--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorPrimaryDark">#3F51B5</color>
     <color name="colorAccent">#FF5722</color>
 
+    <color name="colorGreyPrimary">#A1A1A1</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
@@ -12,4 +14,5 @@
     <color name="orange">#FF9800</color>
 
     <color name="colorIconFill">@color/colorPrimaryDark</color>
+    <color name="textColorPrimary">@color/colorPrimaryDark</color>
 </resources>
