--- a/app/src/main/res/layout/recycler_item_event.xml
+++ b/app/src/main/res/layout/recycler_item_event.xml
@@ -27,6 +27,7 @@
         android:text="@string/app_name"
         android:textColor="@color/textColorPrimary"
         android:textSize="@dimen/_16ssp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/image"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,6 +41,7 @@
         android:text="@string/app_name"
         android:textColor="@color/textColorPrimary"
         android:textSize="@dimen/_14ssp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/image"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
@@ -54,6 +56,7 @@
         android:textColor="@color/textColorPrimary"
         android:textSize="@dimen/_14ssp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
