Ellipsize title item

--- a/app/src/main/res/layout/recycler_item_event.xml
+++ b/app/src/main/res/layout/recycler_item_event.xml
@@ -24,6 +24,7 @@
         android:layout_margin="@dimen/_4sdp"
         android:ellipsize="end"
         android:fontFamily="@font/sfpro_medium"
+        android:singleLine="true"
         android:text="@string/app_name"
         android:textColor="@color/textColorPrimary"
         android:textSize="@dimen/_16ssp"
@@ -38,6 +39,7 @@
         android:layout_margin="@dimen/_4sdp"
         android:ellipsize="end"
         android:fontFamily="@font/sfpro_regular"
+        android:singleLine="true"
         android:text="@string/app_name"
         android:textColor="@color/textColorPrimary"
         android:textSize="@dimen/_14ssp"
