--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="colorIconFill">#A1A1A1</color>
     <color name="textColorPrimary">@color/colorGreyPrimary</color>
+    <color name="mainBackgroundColor">@color/black</color>
 </resources>
