--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
 
     <color name="colorIconFill">@color/colorPrimaryDark</color>
     <color name="textColorPrimary">@color/colorPrimaryDark</color>
+    <color name="mainBackgroundColor">@color/white</color>
 </resources>
