--- a/app/src/main/res/layout/fragment_video_player.xml
+++ b/app/src/main/res/layout/fragment_video_player.xml
@@ -19,13 +19,13 @@
             app:navigationIcon="@drawable/ic_arrow_round_back">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/toolbar_title"
+                android:id="@+id/constraint_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/bar_one_title"
+                    android:id="@+id/toolbar_title"
                     style="@style/ToolBarTitleStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -44,11 +44,25 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/appbar"
+        android:layout_centerInParent="true"
+        android:layout_margin="@dimen/_4sdp"
+        android:fontFamily="@font/sfpro_medium"
+        android:gravity="center"
+        android:padding="@dimen/_4sdp"
+        android:text="@string/app_name"
+        android:textColor="@color/textColorPrimary"
+        android:textSize="@dimen/_16ssp" />
+
     <VideoView
         android:id="@+id/video_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/appbar"
+        android:layout_below="@id/title"
         android:layout_centerInParent="true"
         android:layout_margin="@dimen/_8sdp"
         android:padding="@dimen/_8sdp" />
